# plantain2asr

./: .gitignore  404.html  LICENSE  README.md  __init__.py  benchmark_rudevices.ipynb  experiment.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
analysis/: __init__.py  agreement.py  benchmark.py  calibration.py  corpus_stats.py  diff_visualizer.py  duration.py  hallucinations.py  ngram_errors.py  performance.py  pos_errors.py  statistics.py  topic_modeling.py  vocab_intersection.py  word_error_rate.py
api/analysis/: index.html
api/dataloaders/: index.html
api/metrics/: index.html
api/models/: index.html
api/normalization/: index.html
api/reporting/: index.html
constructor/: index.html
core/: processor.py
dataloaders/: __init__.py  base.py  dagrus_dataset.py  golos_dataset.py  io.py  nemo_dataset.py  rudevices_dataset.py  types.py
docs/: constructor.html  constructor.md  constructor.ru.md  index.md  index.ru.md  quickstart.md  quickstart.ru.md
docs/api/: analysis.md  analysis.ru.md  dataloaders.md  dataloaders.ru.md  metrics.md  metrics.ru.md  models.md  models.ru.md  normalization.md  normalization.ru.md  reporting.md  reporting.ru.md
docs/extending/: custom_metric.md  custom_metric.ru.md  custom_model.md  custom_model.ru.md  custom_normalizer.md  custom_normalizer.ru.md  custom_section.md  custom_section.ru.md  index.md  index.ru.md
extending/: index.html
extending/custom_metric/: index.html
extending/custom_model/: index.html
extending/custom_normalizer/: index.html
extending/custom_section/: index.html
metrics/: __init__.py  base.py  composite.py  factory.py
metrics/complex/: bert_score.py  pos_analysis.py
metrics/simple/: accuracy.py  cer.py  idr.py  length_ratio.py  mer.py  wer.py  wil.py  wip.py
metrics/utils/: alignment.py
models/: __init__.py  base.py  factory.py
models/local/: __init__.py  canary_model.py  gigaam_v2.py  gigaam_v3.py  tone_model.py  vosk_model.py  whisper_model.py
models/remote/: __init__.py  salutespeech.py  salutespeech_api.py
normalization/: __init__.py  base.py  dagrus.py  golos.py  simple.py
quickstart/: index.html
reporting/: __init__.py  builder.py  server.py  template.py
reporting/sections/: __init__.py  base.py  diff.py  errors.py  metrics.py
ru/: index.html
ru/api/analysis/: index.html
ru/api/dataloaders/: index.html
ru/api/metrics/: index.html
ru/api/models/: index.html
ru/api/normalization/: index.html
ru/api/reporting/: index.html
ru/constructor/: index.html
ru/extending/: index.html
ru/extending/custom_metric/: index.html
ru/extending/custom_model/: index.html
ru/extending/custom_normalizer/: index.html
ru/extending/custom_section/: index.html
ru/quickstart/: index.html
search/: search_index.json
tests/: fake_backends.py  test_architecture_smoke.py  test_benchmark.py  test_core_smoke.py  test_docs_constructor.py  test_experiment.py  test_gigaam_models.py  test_multi_model_smoke.py  test_packaging_metadata.py  test_public_api_smoke.py  test_tone_model.py  test_train_pipeline.py  test_training_capabilities.py  test_vosk_model.py  test_whisper_model.py
train/: __init__.py  base_trainer.py  config.py  dataset.py  gigaam_trainer.py
utils/: __init__.py  device.py  functional.py  logging.py  optional_imports.py
