[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "plantain2asr"
version = "0.1.0"
description = "A benchmarking and analysis framework for Russian ASR models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

keywords = ["asr", "speech-recognition", "benchmarking", "nlp", "russian"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies (required for the framework itself)
dependencies = [
    "torch>=2.0",
    "tqdm>=4.64",
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.optional-dependencies]
# Local model backends
gigaam = ["transformers>=4.40", "accelerate>=0.27"]
whisper = ["transformers>=4.40", "accelerate>=0.27"]
vosk = ["vosk>=0.3.45"]
canary = ["nemo_toolkit[asr]>=1.23"]

# Analysis & metrics
analysis = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "bert-score>=0.3.13",
    "pymorphy3>=1.0",
    "gensim>=4.3",
]

# Training
train = [
    "transformers>=4.40",
    "accelerate>=0.27",
    "datasets>=2.14",
    "wandb>=0.16",
]

# Everything
all = [
    "plantain2asr[gigaam,whisper,vosk,analysis,train]",
]

[project.urls]
Homepage = "https://github.com/your-org/plantain2asr"
Issues = "https://github.com/your-org/plantain2asr/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["plantain2asr*"]
exclude = ["asr_data*", "cache*", "checkpoints*"]
