[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plantain2asr"
version = "1.0.2"
description = "A benchmarking and analysis framework for Russian ASR models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

keywords = ["asr", "speech-recognition", "benchmarking", "nlp", "russian", "wer"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core: minimum to load datasets and compute WER/CER metrics (no GPU required)
dependencies = [
    "jiwer>=3.0",
    "tqdm>=4.64",
    "requests>=2.28",
]

[project.optional-dependencies]

# pip install plantain2asr[tone]
tone = [
    "tone @ https://github.com/voicekit-team/T-one/archive/3c5b6c015038173840e62cea99e10cdb1c759116.tar.gz",
    "miniaudio>=1.2",
    "onnxruntime>=1.16",
]

# pip install plantain2asr[tone-cpu]
tone-cpu = [
    "tone @ https://github.com/voicekit-team/T-one/archive/3c5b6c015038173840e62cea99e10cdb1c759116.tar.gz",
    "miniaudio>=1.2",
    "onnxruntime>=1.16",
]

# pip install plantain2asr[tone-gpu]
tone-gpu = [
    "tone @ https://github.com/voicekit-team/T-one/archive/3c5b6c015038173840e62cea99e10cdb1c759116.tar.gz",
    "miniaudio>=1.2",
    "onnxruntime-gpu>=1.16",
]

# pip install plantain2asr[gigaam-v2]
gigaam-v2 = [
    "gigaam>=0.1.0",
]

# pip install plantain2asr[gigaam-v3]
gigaam-v3 = [
    "torch>=2.5,<2.6",
    "torchaudio>=2.5,<2.6",
    "transformers>=4.40,<5",
    "accelerate>=0.27",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "sentencepiece>=0.1.99",
]

# pip install plantain2asr[gigaam]
gigaam = [
    "gigaam>=0.1.0",
    "torch>=2.5,<2.6",
    "torchaudio>=2.5,<2.6",
    "transformers>=4.40,<5",
    "accelerate>=0.27",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "sentencepiece>=0.1.99",
]

# pip install plantain2asr[whisper]
whisper = [
    "torch>=2.5,<2.6",
    "transformers>=4.40,<5",
    "accelerate>=0.27",
    "librosa>=0.10",
]

# pip install plantain2asr[vosk]
vosk = [
    "vosk>=0.3.45",
]

# pip install plantain2asr[canary]
# Note: nemo_toolkit is heavy — install manually if needed
canary = [
    "nemo_toolkit[asr]>=1.23",
]

# pip install plantain2asr[analysis]
analysis = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "pymorphy3>=1.0",
    "gensim>=4.3",
    "bert-score>=0.3.13",
    "torchmetrics>=1.0",
    "num2words>=0.5.13",
]

# pip install plantain2asr[train]
train = [
    "torch>=2.5,<2.6",
    "transformers>=4.40,<5",
    "accelerate>=0.27",
    "datasets>=2.14",
    "wandb>=0.16",
]

# Recommended single-environment installs for running multiple ASR models
asr-cpu = [
    "tone @ https://github.com/voicekit-team/T-one/archive/3c5b6c015038173840e62cea99e10cdb1c759116.tar.gz",
    "miniaudio>=1.2",
    "onnxruntime>=1.16",
    "gigaam>=0.1.0",
    "torch>=2.5,<2.6",
    "torchaudio>=2.5,<2.6",
    "transformers>=4.40,<5",
    "accelerate>=0.27",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "sentencepiece>=0.1.99",
    "librosa>=0.10",
    "vosk>=0.3.45",
]

asr-gpu = [
    "tone @ https://github.com/voicekit-team/T-one/archive/3c5b6c015038173840e62cea99e10cdb1c759116.tar.gz",
    "miniaudio>=1.2",
    "onnxruntime-gpu>=1.16",
    "gigaam>=0.1.0",
    "torch>=2.5,<2.6",
    "torchaudio>=2.5,<2.6",
    "transformers>=4.40,<5",
    "accelerate>=0.27",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "sentencepiece>=0.1.99",
    "librosa>=0.10",
    "vosk>=0.3.45",
]

# pip install plantain2asr[all]
all = [
    "tone @ https://github.com/voicekit-team/T-one/archive/3c5b6c015038173840e62cea99e10cdb1c759116.tar.gz",
    "miniaudio>=1.2",
    "onnxruntime>=1.16",
    "gigaam>=0.1.0",
    "torch>=2.5,<2.6",
    "torchaudio>=2.5,<2.6",
    "transformers>=4.40,<5",
    "accelerate>=0.27",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "sentencepiece>=0.1.99",
    "librosa>=0.10",
    "vosk>=0.3.45",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "pymorphy3>=1.0",
    "gensim>=4.3",
    "bert-score>=0.3.13",
    "torchmetrics>=1.0",
    "num2words>=0.5.13",
    "datasets>=2.14",
    "wandb>=0.16",
]

# pip install plantain2asr[all-gpu]
all-gpu = [
    "tone @ https://github.com/voicekit-team/T-one/archive/3c5b6c015038173840e62cea99e10cdb1c759116.tar.gz",
    "miniaudio>=1.2",
    "onnxruntime-gpu>=1.16",
    "gigaam>=0.1.0",
    "torch>=2.5,<2.6",
    "torchaudio>=2.5,<2.6",
    "transformers>=4.40,<5",
    "accelerate>=0.27",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "sentencepiece>=0.1.99",
    "librosa>=0.10",
    "vosk>=0.3.45",
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "pymorphy3>=1.0",
    "gensim>=4.3",
    "bert-score>=0.3.13",
    "torchmetrics>=1.0",
    "num2words>=0.5.13",
    "datasets>=2.14",
    "wandb>=0.16",
]

[project.urls]
Homepage = "https://github.com/akatsnelson/plantain2asr"
Documentation = "https://akatsnelson.github.io/plantain2asr"
Issues = "https://github.com/akatsnelson/plantain2asr/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "core: lightweight package smoke tests",
    "tone: T-One backend tests",
    "gigaam: GigaAM backend tests",
    "whisper: Whisper backend tests",
    "vosk: Vosk backend tests",
    "train: train-module smoke tests",
    "integration: multi-model pipeline tests",
]

# Package discovery is handled by setup.py (needed due to non-standard layout
# where the git repo root itself is the plantain2asr package directory)
